# NQL

./: .gitignore  FILE_MANAGEMENT.md  GEMINI.md  MANIFEST.in  README.md  benchmark.py  pyproject.toml  requirements.txt  setup.py  test_matcher_logic.py
.github/workflows/: main.yml
api/: main.py
benchmarks/: school.json
docs/: ENTERPRISE.md
nql/: __init__.py  builder.py  confidence.py  config.py  date_resolver.py  engine.py  executor.py  graph.py  matcher.py  ml_planner.py  models.py  planner.py  profiler.py  scanner.py  schema_cache.py  validator.py
nql/enterprise/: explanation.py  learning.py  memory.py  monitoring.py  plugins.py  smart_join.py
nql/integrations/: __init__.py  fastapi.py
nql/ml/: convert_datasets.py  dataset_gen.py  inference.py  model.py  train.py
nql/ml/data/: dataset.json  mapping.json  telemetry_v3.jsonl
nql/plugins/: __init__.py  core.py
tests/: test_engine.py  test_multiturn.py
